recipes/chicken.css
*{
    margin: 0px;
    padding: 0px;
    border: 0px;
    background-color: coral;
    box-sizing: border-box;
    color: white;
    font-family: Arial, Helvetica, sans-serif;
}

h1,
h3{
    text-align: center;
}

h1{
    background-color: cornflowerblue;
    width: 300px;
    height: 60px;
    border: 10px solid seagreen;
    margin-left: auto;
    margin-right: auto;
    color: #fff;
    margin-top: 10px;
    margin-bottom: 10px;
}

h3{
    
    background-color: seagreen;
    font-size: 25px;

    margin-bottom: 5px;
}

img,
li{
    margin-left: 25px;
    margin-right: 25px;
    margin-bottom: 10px;
}

p{
    margin-left: 25px;
    margin-right: 25px;
    
}

.subH1,
.subH3{
    width: 200px;
    height: 30px;
    margin-top: 30px;
    margin-left: auto;
    margin-right: auto;
}

.subH3{
    width: 120px;
    height: 30px;
}

